--- a/04-PO33Q.html
+++ b/04-PO33Q.html
@@ -330,7 +330,7 @@ Student Presentations: Your Formative Assessment
 <li><code>na.exclude</code>: Drop out rows with missing values, but keeps track of where they were (so that when you make predictions, for example, you end up with a vector whose length is that of the original response.)</li>
 <li><code>na.pass</code>: Take no action</li>
 </ul>
-<p>By default, R would apply <code>na.omit</code> which we call “<span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">listwise deletion</a></span>”. This means, that as soon as one value within an observation is missing, R drops that entire observation. This can potentially decimate the number of observations for analysis quite drastically! This in turn has implications for inference. Let me illustrate this.</p>
+<p>By default, R would apply <code>na.omit</code> which we call “<span class="gls"><a href="https://drfloreiche.github.io/PO33Q/13-Glossary.html">listwise deletion</a></span>”. This means, that as soon as one value within an observation is missing, R drops that entire observation. This can potentially decimate the number of observations for analysis quite drastically! This in turn has implications for inference. Let me illustrate this.</p>
 </section>
 <section id="methodological-implications" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="methodological-implications">Methodological Implications</h2>
@@ -745,7 +745,7 @@ Table&nbsp;3: What is left…
 <p>YouTube link to follow</p>
 </div>
 <p>When we are testing a theory, such as modernisation theory, then we usually have a plethora of independent variables to measure the concepts involved in that theory. Take economic development. In its origins, modernisation theory saw development almost purely as economic growth, a notion enshrined in what we refer to now as Classical Modernisation Theory. But as our understanding of what constitutes “development” has changed over time, so have the propositions of modernisation theory. <span class="citation" data-cites="diamond:1992">Diamond (1992)</span> made an important contribution to the literature by proposing that wealth, such as per capita GDP, really is only a means to facilitate social change, such as increasing education levels, allowing people to look after their health, etc. He posited that it is these social changes that facilitate democracy. Wealth is necessary, but it is only a first step.</p>
-<p>Modernisation theory, therefore, can be seen as having two parts, the classical, and the new one. When you look at journal articles, you will notice that these parts are usually tested separately in regression models, first just the classical component, then just the social component, then both of them together. This bottom-up approach is an important strategy of <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">model building</a></span> in regression analysis, as it allows us to isolate the explanatory power of not only each part of the theory, but also of individual variables.</p>
+<p>Modernisation theory, therefore, can be seen as having two parts, the classical, and the new one. When you look at journal articles, you will notice that these parts are usually tested separately in regression models, first just the classical component, then just the social component, then both of them together. This bottom-up approach is an important strategy of <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/13-Glossary.html">model building</a></span> in regression analysis, as it allows us to isolate the explanatory power of not only each part of the theory, but also of individual variables.</p>
 <p>Let me illustrate what I mean by this. First, we need to decide how to actually measure “economic development” and “social change”. There are a lot of options:</p>
 <ul>
 <li>Economic Development
@@ -773,8 +773,8 @@ Table&nbsp;3: What is left…
 
     <script>
 
-      function styleCell_80h3319bnvnebq5o48nj(i, j, css_id) {
-          var table = document.getElementById("tinytable_80h3319bnvnebq5o48nj");
+      function styleCell_11zvi8qhfb0efhks4lkl(i, j, css_id) {
+          var table = document.getElementById("tinytable_11zvi8qhfb0efhks4lkl");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -784,7 +784,7 @@ Table&nbsp;3: What is left…
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_80h3319bnvnebq5o48nj');
+        var table = document.getElementById('tinytable_11zvi8qhfb0efhks4lkl');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -792,8 +792,8 @@ Table&nbsp;3: What is left…
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_80h3319bnvnebq5o48nj(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_80h3319bnvnebq5o48nj");
+      function spanCell_11zvi8qhfb0efhks4lkl(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_11zvi8qhfb0efhks4lkl");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -823,21 +823,21 @@ Table&nbsp;3: What is left…
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_ywiyl2khiy49nw753xom',}, 
-          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_nr1cw9qs46i8p5hsub9q',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_tkpq87u9hms02peshmop',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_ocokgsrndmjewvw025m4',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_n50vq28726g7ngu0kbbj',}, 
-          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_2kqrwv39s4krxvbvvtxx',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_d9d49x05cxpgxjs361sc',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_2ozc2s8lz6xjskavqcic',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_ml4uoql68ct2kd5g6v4z',}, 
+          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_yy97schjzmvq2ob6bdjo',}, 
+          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_mjucyuwkzmbifxt2up1s',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_ekxt9b2s9mbp0fdei0fq',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_snunfxn6qtcta2lu9h3j',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_utt4wbm8968ejqlvw8xg',}, 
+          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_ssayoehhd1qk1gvl3n2n',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_84qlv7bvin9s2tcjirml',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_gyqchr306c7fxgzxqn8s',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_qbvr6kxv3vdgv21dm7so',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_80h3319bnvnebq5o48nj(cell.i, cell.j, group.css_id);
+                  styleCell_11zvi8qhfb0efhks4lkl(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -845,18 +845,18 @@ Table&nbsp;3: What is left…
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_ywiyl2khiy49nw753xom, .table th.tinytable_css_ywiyl2khiy49nw753xom { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_nr1cw9qs46i8p5hsub9q, .table th.tinytable_css_nr1cw9qs46i8p5hsub9q { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_tkpq87u9hms02peshmop, .table th.tinytable_css_tkpq87u9hms02peshmop { text-align: center; }
-      .table td.tinytable_css_ocokgsrndmjewvw025m4, .table th.tinytable_css_ocokgsrndmjewvw025m4 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_n50vq28726g7ngu0kbbj, .table th.tinytable_css_n50vq28726g7ngu0kbbj { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_2kqrwv39s4krxvbvvtxx, .table th.tinytable_css_2kqrwv39s4krxvbvvtxx { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_d9d49x05cxpgxjs361sc, .table th.tinytable_css_d9d49x05cxpgxjs361sc { text-align: left; }
-      .table td.tinytable_css_2ozc2s8lz6xjskavqcic, .table th.tinytable_css_2ozc2s8lz6xjskavqcic { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_ml4uoql68ct2kd5g6v4z, .table th.tinytable_css_ml4uoql68ct2kd5g6v4z { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_yy97schjzmvq2ob6bdjo, .table th.tinytable_css_yy97schjzmvq2ob6bdjo { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_mjucyuwkzmbifxt2up1s, .table th.tinytable_css_mjucyuwkzmbifxt2up1s { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_ekxt9b2s9mbp0fdei0fq, .table th.tinytable_css_ekxt9b2s9mbp0fdei0fq { text-align: center; }
+      .table td.tinytable_css_snunfxn6qtcta2lu9h3j, .table th.tinytable_css_snunfxn6qtcta2lu9h3j { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_utt4wbm8968ejqlvw8xg, .table th.tinytable_css_utt4wbm8968ejqlvw8xg { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ssayoehhd1qk1gvl3n2n, .table th.tinytable_css_ssayoehhd1qk1gvl3n2n { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_84qlv7bvin9s2tcjirml, .table th.tinytable_css_84qlv7bvin9s2tcjirml { text-align: left; }
+      .table td.tinytable_css_gyqchr306c7fxgzxqn8s, .table th.tinytable_css_gyqchr306c7fxgzxqn8s { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_qbvr6kxv3vdgv21dm7so, .table th.tinytable_css_qbvr6kxv3vdgv21dm7so { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_80h3319bnvnebq5o48nj" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_11zvi8qhfb0efhks4lkl" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -926,7 +926,7 @@ Table&nbsp;4: Test of Classical and New Modernisation
 <section id="control-variables" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="control-variables">Control Variables</h2>
 <p>The selection of independent variables MUST be guided by theory. After all, this is our purpose in running regression models: finding out whether a particular theory can explain an empirical phenomenon we are witnessing. If you select variables that are irrelevant to your theory, then the research design breaks down, as you are no longer focusing on testing your theory. I know it sounds trivial, but you would be surprised how many students mess this up in assessments.</p>
-<p>But there is one – and only one – exception to the rule of not including variables that are not motivated by the theory you are testing: so-called <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">control variables</a></span>.</p>
+<p>But there is one – and only one – exception to the rule of not including variables that are not motivated by the theory you are testing: so-called <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/13-Glossary.html">control variables</a></span>.</p>
 <p>For example, we suspect that the amount of official development aid (ODA) a country has received might influence democracy. Modernisation theory is only concerned with processes WITHIN a country, and so a flow of money coming from outside of the country is not part of the theory. Nonetheless, such funds can either facilitate development, in the sense of helping to build infrastructure such as roads, etc. Or it can be used for democracy promotion directly (the World Bank does tie some of its ODA funds to this purpose), through funding relevant institutions, facilitating elections, etc. So, even though these external funds have no place in our theory, we have strong reason to believe that they affect the dependent variable. And it is for this reason, that we would still include them in our regression model to control for their influence. Why? The principle of ceteris paribus (see Week 3) only applies with respect to those variables included in the model. And if we wish to control for ODA, or to purify those coefficients which are motivated by theory from the influence of ODA, we need to include this variable in the model in order to do so.</p>
 <p>Even though I am presenting this here as the last step, you would realistically select these variables together with the ones motivated by the theory, as you will also have to perform conceptualisation and measurement, check data availability, etc.</p>
 </section>
