--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ header#title-block-header, .quarto-title-block { display: block !important; }
 <h1 class="unnumbered">Website Features</h1>
 <p>You will find embedded in the text five different types of boxes which serve different purposes:</p>
 <div class="def">
-<p>These boxes contain important definitions relating to the methods we explore in this companion. You can also click on <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/full-glossary.html">glossary entries</a></span> in the text to take you to the relevant glossary section of the companion.</p>
+<p>These boxes contain important definitions relating to the methods we explore in this companion. You can also click on <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/13-Glossary.html">glossary entries</a></span> in the text to take you to the relevant glossary section of the companion.</p>
 </div>
 <div class="bulb">
 <p>Some explanations that will hopefully make your work with this webpage or learning the material itself easier.</p>
