--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -784,6 +784,7 @@ Figure&nbsp;4: Shifting <span class="math inline">\(\tau\)</span>
 </figcaption>
 </figure>
 </div>
+<p>&nbsp;</p>
 <div class="top-bottom-rule-only">
 <table style="border-collapse: collapse; border-spacing: 0; margin: auto; text-align: center; font-size: 90%; width: 60%;">
 <thead>
@@ -828,6 +829,9 @@ True<br>Negative
 </thead>
 </table>
 </div>
+<div aria-hidden="true" role="presentation" style="height:4em;width:100%;">
+
+</div>
 <p><span class="math display">\[\begin{equation}
 \text{False Positive Rate}=\text{Sensitivity}=\frac{\text{False Positives}}{\text{False Positives}+\text{True Negatives}}
 \end{equation}\]</span></p>
@@ -835,6 +839,7 @@ True<br>Negative
 \text{True Positive Rate}&amp;=1-\text{Specificity}=\frac{\text{True Positives}}{\text{True Positives}+\text{False Negatives}}\\[10pt]
 \text{Specificity} &amp;=1-\text{True Positive Rate}=1-\frac{\text{TP}}{\text{TP}+\text{FN}} \nonumber
 \end{align}\]</span></p>
+<p>&nbsp;</p>
 <p>For our example the True Positive Rate (TPR) represents the proportion of correctly specified democracies. If we calculate these rates for each of our n confusion matrices, we are already reducing four quantities into two. Let’s do it. To provide a visual aid in this rather laborious process, I have created <a href="#fig-towardsroc" class="quarto-xref">Figure&nbsp;<span>5</span></a> which depicts all eight shifts.</p>
 <p>&nbsp; &nbsp;</p>
 <div id="fig-towardsroc" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
@@ -1647,8 +1652,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_bjqhrsqdu26da7gul65y(i, j, css_id) {
-          var table = document.getElementById("tinytable_bjqhrsqdu26da7gul65y");
+      function styleCell_ztwc2ogawad6a7ddivyh(i, j, css_id) {
+          var table = document.getElementById("tinytable_ztwc2ogawad6a7ddivyh");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1657,8 +1662,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_bjqhrsqdu26da7gul65y(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_bjqhrsqdu26da7gul65y");
+      function spanCell_ztwc2ogawad6a7ddivyh(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_ztwc2ogawad6a7ddivyh");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1689,26 +1694,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_xe88p69ucik1aq1gkq3i',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_t9hm8z8aruytt1fzj4gy',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_s23jkdr83uxgwa6qtfdg',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_f9qhjf3b685dj0rlkyow',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_x872ylqelp6257htvkbf',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_xmj9ao84zo5620z9ai1i',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_smf9vxme2wzm4471dbll',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_9slc3dz6me5xiid7bgyv',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_mtt102u7pnl6jujzhj22',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_hfws2fj7zgh4wocjdt1t',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_dawpx9nhh6spi8a7swgp',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_i8m3d123yykcvg3gc6ut',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_2b0rjjckldzjuugbecj5',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_vtflr0x5dpyr9p4gxpkn',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_nkshfaugsyy07p8a38ej',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_s6axycek78cn5vizdcki',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_iikqmypygkt3q11bi4qr',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_5jentwxosx9vrlau1tzc',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_nidhzns8y0fbgdkkk99g',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_ybqklqb76xoucpyslzua',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_lrpznh9vht9n0e92uk7i',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_65fc05ebnix0w8pnvgh9',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_7hp27m85o6rzvo2l4o9q',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_43xe35og9ynxwetan45t',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_9mbqtp3i4nj3l7k6cxci',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_hrimnuu5zfztxcbedh1f',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_r7ro3ygeegq03jn49x48',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_6z5m19o6f3ew19iuh7sl',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_bjqhrsqdu26da7gul65y(cell.i, cell.j, group.css_id);
+                  styleCell_ztwc2ogawad6a7ddivyh(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1716,23 +1721,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_xe88p69ucik1aq1gkq3i, .table th.tinytable_css_xe88p69ucik1aq1gkq3i { text-align: center; text-align: center; }
-      .table td.tinytable_css_t9hm8z8aruytt1fzj4gy, .table th.tinytable_css_t9hm8z8aruytt1fzj4gy { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_s23jkdr83uxgwa6qtfdg, .table th.tinytable_css_s23jkdr83uxgwa6qtfdg { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_f9qhjf3b685dj0rlkyow, .table th.tinytable_css_f9qhjf3b685dj0rlkyow { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_x872ylqelp6257htvkbf, .table th.tinytable_css_x872ylqelp6257htvkbf { text-align: center; }
-      .table td.tinytable_css_xmj9ao84zo5620z9ai1i, .table th.tinytable_css_xmj9ao84zo5620z9ai1i { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_smf9vxme2wzm4471dbll, .table th.tinytable_css_smf9vxme2wzm4471dbll { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_9slc3dz6me5xiid7bgyv, .table th.tinytable_css_9slc3dz6me5xiid7bgyv { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_mtt102u7pnl6jujzhj22, .table th.tinytable_css_mtt102u7pnl6jujzhj22 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_hfws2fj7zgh4wocjdt1t, .table th.tinytable_css_hfws2fj7zgh4wocjdt1t { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_dawpx9nhh6spi8a7swgp, .table th.tinytable_css_dawpx9nhh6spi8a7swgp { text-align: left; }
-      .table td.tinytable_css_i8m3d123yykcvg3gc6ut, .table th.tinytable_css_i8m3d123yykcvg3gc6ut { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_2b0rjjckldzjuugbecj5, .table th.tinytable_css_2b0rjjckldzjuugbecj5 { text-align: left; text-align: center; }
-      .table td.tinytable_css_vtflr0x5dpyr9p4gxpkn, .table th.tinytable_css_vtflr0x5dpyr9p4gxpkn { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_nkshfaugsyy07p8a38ej, .table th.tinytable_css_nkshfaugsyy07p8a38ej { text-align: center; text-align: center; }
+      .table td.tinytable_css_s6axycek78cn5vizdcki, .table th.tinytable_css_s6axycek78cn5vizdcki { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_iikqmypygkt3q11bi4qr, .table th.tinytable_css_iikqmypygkt3q11bi4qr { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_5jentwxosx9vrlau1tzc, .table th.tinytable_css_5jentwxosx9vrlau1tzc { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_nidhzns8y0fbgdkkk99g, .table th.tinytable_css_nidhzns8y0fbgdkkk99g { text-align: center; }
+      .table td.tinytable_css_ybqklqb76xoucpyslzua, .table th.tinytable_css_ybqklqb76xoucpyslzua { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_lrpznh9vht9n0e92uk7i, .table th.tinytable_css_lrpznh9vht9n0e92uk7i { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_65fc05ebnix0w8pnvgh9, .table th.tinytable_css_65fc05ebnix0w8pnvgh9 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_7hp27m85o6rzvo2l4o9q, .table th.tinytable_css_7hp27m85o6rzvo2l4o9q { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_43xe35og9ynxwetan45t, .table th.tinytable_css_43xe35og9ynxwetan45t { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_9mbqtp3i4nj3l7k6cxci, .table th.tinytable_css_9mbqtp3i4nj3l7k6cxci { text-align: left; }
+      .table td.tinytable_css_hrimnuu5zfztxcbedh1f, .table th.tinytable_css_hrimnuu5zfztxcbedh1f { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_r7ro3ygeegq03jn49x48, .table th.tinytable_css_r7ro3ygeegq03jn49x48 { text-align: left; text-align: center; }
+      .table td.tinytable_css_6z5m19o6f3ew19iuh7sl, .table th.tinytable_css_6z5m19o6f3ew19iuh7sl { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_bjqhrsqdu26da7gul65y" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_ztwc2ogawad6a7ddivyh" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
